# esops

./: .gitignore  .pre-commit-config.yaml  Makefile  notes.md  poetry-setup.sh  pyproject.toml  simulate.sh
experiments/0ff0b099236e49f3/: choices.json  config.json  probas.json  sum_rewards.json
experiments/2882b48616ef499b/: choices.json  config.json  probas.json  sum_rewards.json
experiments/48d9fba5c5fe4b9d/: config.json  probas.json  sum_rewards.json
experiments/61bba6340ebb4a0f/: config.json  probas.json  sum_rewards.json
experiments/6e46b2ece150468f/: choices.json  config.json  probas.json  sum_rewards.json
experiments/7b16486e444f48a4/: choices.json  probas.json  sum_rewards.json
experiments/905c26db02d3472b/: choices.json  rewards.json
experiments/b93e0e07ecb24c60/: choices.json  config.json  probas.json
experiments/ba517affd05d4214/: choices.json  config.json  probas.json  sum_rewards.json
experiments/d69c6f06701d422d/: choices.json  config.json  probas.json  sum_rewards.json
experiments/seed=256/alpha=0.01.gamma=0.5/run=1cce29fc327c460c/: choices.json  qvalues.json  rewards.json  sum_rewards.json
experiments/seed=256/alpha=0.01.gamma=0.5/run=712cb16063d44881/: choices.json  qvalues.json  rewards.json  sum_rewards.json
experiments/seed=256/alpha=0.01.gamma=0.5/run=923ae06f31064b1a/: choices.json  config.json  qvalues.json  rewards.json  sum_rewards.json
simulation-resources/: views.csv
src/esops/: cli.py  envs.py  utils.py
src/esops/agents/: ql.py
src/esops/opt/: agents.py
(+362 files in other folders)
